--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
     <head>
         <h1>Hello World</h1>
     </head>
+
+    <script src="./test.js">
+        
+    </script>
     
 </body>
 </html>
